fix minor bug with alignment

--- a/website/src/assets/styles/appointment.css
+++ b/website/src/assets/styles/appointment.css
@@ -86,12 +86,12 @@
     border: none;
     color: white;
     padding: 10px 25px;
-    text-align: center;
     text-decoration: none;
     display: flex;
     font-size: 16px;
     cursor: pointer;
     border-radius: 4px;
+    justify-content: center;
 }
 
 .deleteButtonWrap {
